...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hint_usuario" />

        <EditText
            android:id="@+id/etUsuario"
            style="@style/CampoTexto"
            android:hint="@string/hint_usuario"
            android:inputType="text" />

        <TextView
            style="@style/TextoCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_clave" />

        <EditText
            android:id="@+id/etClave"
            style="@style/CampoTexto"
            android:hint="@string/hint_clave"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvError"
...
            android:padding="12dp"
            android:textColor="@color/estado_inhabilitado"
            android:textSize="13sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnIngresar"
            style="@style/BotonPrimario"
            android:layout_marginTop="24dp"
            android:text="@string/btn_ingresar" />

        <TextView
            android:layout_width="wrap_content"
...
