...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNombreDocumento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                   android:fontFamily="@font/montserrat_black"
                    android:textColor="@color/primario"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="RECIBO DE PAGO" />

                <TextView
                    android:id="@+id/tvNroDocumento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/texto"
...
